--- a/ToDoList/Base.lproj/Main.storyboard
+++ b/ToDoList/Base.lproj/Main.storyboard
@@ -13,20 +13,50 @@
         <!--My To Do's-->
         <scene sceneID="rlk-FZ-yF5">
             <objects>
-                <tableViewController id="nTv-Da-oI9" customClass="ToDoTableViewController" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="nTv-Da-oI9" customClass="TableViewController" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="EcD-M1-SpE">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ToDoCellIdentifier" id="Y4w-6Z-V3B">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ToDoCellIdentifier" id="Y4w-6Z-V3B" customClass="ToDoCell" customModule="ToDoList" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Y4w-6Z-V3B" id="asa-Ax-Jx5">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tUf-R3-HDy">
+                                            <rect key="frame" x="68" y="11" width="299" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CPY-Gi-K8y">
+                                            <rect key="frame" x="24" y="3" width="36" height="36"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="36" id="fdA-o9-kx8"/>
+                                                <constraint firstAttribute="width" constant="36" id="ghz-v3-TeU"/>
+                                            </constraints>
+                                            <state key="normal" image="Unchecked"/>
+                                            <state key="selected" image="Checked"/>
+                                            <connections>
+                                                <action selector="completeButtonTapped:" destination="Y4w-6Z-V3B" eventType="touchUpInside" id="vNo-Hu-wIQ"/>
+                                                <action selector="isCompleteButtonTapped:" destination="n1Q-fi-SMD" eventType="touchUpInside" id="7hZ-9G-OwW"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="tUf-R3-HDy" firstAttribute="leading" secondItem="CPY-Gi-K8y" secondAttribute="trailing" constant="8" id="0Sc-W8-5Jh"/>
+                                        <constraint firstItem="CPY-Gi-K8y" firstAttribute="leading" secondItem="asa-Ax-Jx5" secondAttribute="leadingMargin" constant="8" id="Eqp-ZP-Fh0"/>
+                                        <constraint firstItem="tUf-R3-HDy" firstAttribute="centerY" secondItem="asa-Ax-Jx5" secondAttribute="centerY" id="OdF-G8-oF5"/>
+                                        <constraint firstItem="CPY-Gi-K8y" firstAttribute="centerY" secondItem="asa-Ax-Jx5" secondAttribute="centerY" id="Szd-6p-Lni"/>
+                                        <constraint firstAttribute="trailing" secondItem="tUf-R3-HDy" secondAttribute="trailing" constant="8" id="Wlz-8g-UU1"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="isCompleteButton" destination="CPY-Gi-K8y" id="Zkr-gO-3dl"/>
+                                    <outlet property="titleLabel" destination="tUf-R3-HDy" id="xhk-p8-NhK"/>
                                     <segue destination="n1Q-fi-SMD" kind="show" identifier="showDetails" id="xwQ-Tl-z0L"/>
                                 </connections>
                             </tableViewCell>
@@ -46,7 +76,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="atW-Yc-mN7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="770" y="15"/>
+            <point key="canvasLocation" x="768.79999999999995" y="14.842578710644679"/>
         </scene>
         <!--New ToDo-->
         <scene sceneID="QvY-Jj-QY3">
@@ -243,6 +273,6 @@
         <image name="Unchecked" width="44" height="44"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Udc-rX-tJJ"/>
+        <segue reference="xwQ-Tl-z0L"/>
     </inferredMetricsTieBreakers>
 </document>
